<resources>
    <string name="app_name">Mobile POS</string>
    <string name="activity_main_sell">Sell</string>
    <string name="activity_main_products">Products</string>
    <string name="activity_main_reports">Report</string>
    <string name="activity_main_exit">Exit</string>

    <string name="activity_product_name">Name</string>
    <string name="activity_product_price">Price</string>
    <string name="activity_product_stock">Stock</string>
    <string name="activity_product_code">Code</string>
    <string name="activity_product_code_scan">Tap to Scan Bar/QR Code</string>
    <string name="activity_product_add">Add</string>
    <string name="activity_product_save">Save</string>
    <string name="activity_product_delete">Delete</string>
    <string name="activity_product_previous">Previous</string>
    <string name="activity_product_next">Next</string>
    <string name="activity_product_count_default">0 of 0</string>

    <string name="activity_camera_scan_ok">OK</string>
    <string name="activity_camera_scan_camera_permdialog_title">Camera Permission</string>
    <string name="activity_camera_scan_camera_permdialog_message">Camera permission needed to scan Bar/QR Code</string>

    <string name="activity_camera_scan_camera_savedialog_title">Unsaved Changes</string>
    <string name="activity_camera_scan_camera_savedialog_message">You have unsaved changes which will be discarded. Continue?</string>

    <string name="activity_sell_done">Done</string>
    <string name="activity_sell_cash">Cash</string>

</resources>